fix: fix demo build
- move rollup and ts config for demo to root
- include demo directory in root tsconfig
- update build configs for test and build (exclude demo)

--- a/demo/index.html
+++ b/demo/index.html
@@ -95,6 +95,6 @@
     <noscript>
       Please enable JavaScript to view this website.
     </noscript>
-    <script src="main.js"></script>
+    <script src="main.bundle.js"></script>
   </body>
 </html>
