feat: create css literal tag function
* change css-in-js object based css function to tagged template literal version
* fixes member order in css declarations
* refactor custom-element-declaration into own file
* update documentation
* update card styles
* update checkbox
* add icon component

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,6 +52,9 @@
 <meta property="og:site_name" content="my-app">
 <meta property="og:image" content="images/manifest/icon-144x144.png" />
 
+<!-- Font Awesome Icon Sprite: We can point to a CDN or local files -->
+<meta name="fa:icon-sprite" content="src/icon/sprites/solid.svg" />
+
 <!-- Performance tip: hint to the browser to start the handshake for the fonts site -->
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <script>
