feat: add support for multiple icon sets to icon element
* icon sprites configurable via meta tag
* allow multiple icon sprites
* add font-awesome, material and evil-icons sets
* add icon examples
* continue styling tabs

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,8 +52,10 @@
 <meta property="og:site_name" content="my-app">
 <meta property="og:image" content="images/manifest/icon-144x144.png" />
 
-<!-- Font Awesome Icon Sprite: We can point to a CDN or local files -->
-<meta name="fa:icon-sprite" content="src/icon/sprites/solid.svg" />
+<!-- ui-icon svg sprite locations, can be adjusted for production to where assets are deployed -->
+<meta name="ui-icon:sprite:fa" content="src/icon/sprites/font-awesome/sprite.svg" />
+<meta name="ui-icon:sprite:mat" content="src/icon/sprites/material/sprite.svg" />
+<meta name="ui-icon:sprite:ei" content="src/icon/sprites/evil-icons/sprite.svg" />
 
 <!-- Performance tip: hint to the browser to start the handshake for the fonts site -->
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
