feat: add unicon examples

--- a/demo/index.html
+++ b/demo/index.html
@@ -54,6 +54,7 @@
 
 <!-- ui-icon svg sprite locations, can be adjusted for production to where assets are deployed -->
 <meta name="ui-icon:sprite:fa" content="src/icon/sprites/font-awesome/sprite.svg" />
+<meta name="ui-icon:sprite:uni" content="src/icon/sprites/unicons/sprite.svg" />
 <meta name="ui-icon:sprite:mat" content="src/icon/sprites/material/sprite.svg" />
 <meta name="ui-icon:sprite:ei" content="src/icon/sprites/evil-icons/sprite.svg" />
 
