--- a/demo/index.html
+++ b/demo/index.html
@@ -3,9 +3,9 @@
 
 <head>
 <meta charset="utf-8">
-<title>Custom Element Demo</title>
+<title>Component Demo</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Custom Element Demo">
+<meta name="description" content="Component Demo">
 
 <!--
       The `<base>` tag below is present to support two advanced deployment options:
@@ -26,12 +26,12 @@
 
 <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
 <meta name="mobile-web-app-capable" content="yes">
-<meta name="application-name" content="Custom Element Demo">
+<meta name="application-name" content="Component Demo">
 
 <!-- Add to homescreen for Safari on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="Custom Element Demo">
+<meta name="apple-mobile-web-app-title" content="Component Demo">
 
 <!-- Homescreen icons -->
 <link rel="apple-touch-icon" href="images/manifest/icon-48x48.png">
