--- a/example/index.html
+++ b/example/index.html
@@ -75,12 +75,13 @@
 </script>
 
 <!-- Add any global styles for body, document, etc. -->
-<link rel="stylesheet" href="fonts.css">
+<!-- <link rel="stylesheet" href="fonts.css"> -->
 <style>
   body {
     margin: 0;
     /* This is a font-stack that tries to use the system-default sans-serifs first */
-    font-family: 'Nunito', 'Helvetica Neue', Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    /* font-family: 'Nunito', 'Helvetica Neue', Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
+    font-family: 'Helvetica Neue', Arial, sans-serif;
     font-weight: 400;
     line-height: 1.5;
     min-height: 100vh;
