refactor(overlay): refactor overlay's register and configure methods

--- a/example/index.html
+++ b/example/index.html
@@ -99,7 +99,7 @@
   <noscript>
     Please enable JavaScript to view this website.
   </noscript>
-  <script src="main.bundle.js"></script>
+  <script src="main.bundle.js" async></script>
 </body>
 
 </html>
